--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ language: node_js
 node_js:
   - '12.0.0'
 
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
-  - export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - rm -rf node_modules/ build/
-  - yarn install
-  - yarn build
+  - npm install
+  - npm run build
 deploy:
   provider: heroku
   api_key:
