--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,20 @@ install:
   - rm -rf node_modules/ build/
   - yarn install
   - yarn build
+script: echo "npm test temporarily disabled"
 deploy:
   provider: heroku
   api_key:
     secure: 5ce5511a-538d-49f9-9f9a-5302b99d36af
   app: narutoquest
   on:
-    repo: gabrielgrs/narutoquest
+    branch: master
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: 5ce5511a-538d-49f9-9f9a-5302b99d36af
+  app: narutoquest-dev
+  on:
+    branch: develop
+
