--- a/.travis.yml
+++ b/.travis.yml
@@ -10,28 +10,16 @@ install:
   - yarn install
   - yarn build
 deploy:
-  - provider: heroku
+  provider: heroku
   api_key:
     secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  app: narutoquest
-  on:
-    branch: master
-  - provider: heroku
-  api_key:
-    secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  app: narutoquest
-  on:
-    branch: master
-deploy:
-  - provider: heroku
-  api_key:
-    secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  app: narutoquest
-  on:
-    branch: master
-  - provider: heroku
-  api_key:
-    secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  app: narutoquest-v2
+  app: narutoquest-v
   on:
     branch: v2
+deploy:
+  provider: heroku
+  api_key:
+    secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
+  app: narutoquest
+  on:
+    branch: master
