--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ deploy:
   provider: heroku
   api_key:
     secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  app: narutoquest-v
+  app: narutoquest-v2
   on:
-    branch: v2
+    branch: demo
 deploy:
   provider: heroku
   api_key:
