--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,13 @@ install:
   - yarn install
   - yarn build
 deploy:
-  provider: heroku
+  - provider: heroku
   api_key:
     secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
   app: narutoquest-v2
   on:
     branch: demo
-deploy:
-  provider: heroku
+  - provider: heroku
   api_key:
     secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
   app: narutoquest
