--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,13 @@ deploy:
       secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
     app: narutoquest-v2
     on:
-      branch: demo
+      branch: v2
+  - provider: heroku
+    api_key:
+      secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
+    app: narutoquest-dev
+    on:
+      branch: develop
   - provider: heroku
     api_key:
       secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
