--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "NODE_ENV=production node ./server",
     "client": "NODE_ENV=development react-scripts start",
+    "test": "react-scripts test --passWithNoTests",
     "build": "react-scripts build",
     "server": "NODE_ENV=development nodemon server/index",
     "loadtest": "loadtest -c 10 --rps 100"
