--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.6.7",
+    "mongoose-autopopulate": "^0.9.1",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.3.0",
+    "pm2": "^3.5.1",
     "winston": "^3.2.1",
     "youch": "^2.0.10"
   },
@@ -48,6 +50,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.13",
+    "react-tippy": "^1.2.3",
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "redux-multi": "^0.1.12",
@@ -55,7 +58,6 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
-    "react-tippy": "^1.2.3",
     "styled-components": "^4.3.2"
   },
   "eslintConfig": {
