--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": "ISC",
   "scripts": {
-    "start": "NODE_ENV=production pm2 start ./server -i 0",
+    "start": "pm2-runtime start ecosystem.config.js -i 0 --env production",
     "test": "echo \"\n[ Skip tests ]\n\"",
     "client": "NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
