--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "12.0.0"
+  - '12.0.0'
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
@@ -14,19 +14,14 @@ install:
 deploy:
   - provider: heroku
     api_key:
-      secure: "5ce5511a-538d-49f9-9f9a-5302b99d36af"
-    app: narutoquest-v2
-    on:
-      branch: v2
-  - provider: heroku
-    api_key:
-      secure: "5ce5511a-538d-49f9-9f9a-5302b99d36af"
+      secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
     app: narutoquest-dev
     on:
       branch: develop
+
   - provider: heroku
     api_key:
-      secure: "5ce5511a-538d-49f9-9f9a-5302b99d36af"
+      secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
     app: narutoquest
     on:
       branch: master
