--- a/.travis.yml
+++ b/.travis.yml
@@ -12,21 +12,8 @@ install:
   - yarn build
 
 deploy:
-  - provider
+  provider: heroku
   api_key:
     secure: 5ce5511a-538d-49f9-9f9a-5302b99d36af
-  app: 
-    master: narutoquest
-    develop: narutoquest-dev
-  # provider: heroku
-  #   api_key:
-  #     secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  #   app: narutoquest-dev
-  #   on:
-  #     branch: develop
-  # - provider: heroku
-  #   api_key:
-  #     secure: '5ce5511a-538d-49f9-9f9a-5302b99d36af'
-  #   app: narutoquest
-  #   on:
-  #     branch: master
+  app: narutoquest-dev
+  on: develop
