--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,13 @@ install:
   - yarn build
 
 deploy:
-  provider: heroku
-  api_key:
-    secure: 5ce5511a-538d-49f9-9f9a-5302b99d36af
-  app: narutoquest-dev
-  on: develop
+  - provider: heroku
+    api_key:
+      secure: 5ce5511a-538d-49f9-9f9a-5302b99d36af
+    app: narutoquest-dev
+    on: develop
+  - provider: heroku
+    api_key:
+      secure: 5ce5511a-538d-49f9-9f9a-5302b99d36af
+    app: narutoquest
+    on: master
