--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "date-fns": "^1.30.1",
-    "dotenv": "^7.0.0",
+    "date-fns": "^2.4.1",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^3.4.1",
-    "express-slow-down": "^1.3.1",
+    "express-rate-limit": "^5.0.0",
     "faker": "^4.1.0",
-    "helmet": "^3.16.0",
+    "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.6.7",
+    "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.3.0",
     "pm2": "^3.5.1",
+    "react-transition-group": "^4.3.0",
     "winston": "^3.2.1",
     "youch": "^2.0.10"
   },
