--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "client": "NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "server": "NODE_ENV=development DATABASE=mongodb://admin:admin123@ds217438.mlab.com:17438/narutogame_validations nodemon server/index",
+    "server:prod": "NODE_ENV=development DATABASE=mongodb://admin:admin123@ds157571.mlab.com:57571/naruto-quest nodemon server/index",
     "loadtest": "loadtest -c 10 --rps 100"
   },
   "dependencies": {
