--- a/package.json
+++ b/package.json
@@ -18,48 +18,48 @@
     "loadtest": "loadtest -c 10 --rps 100"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "date-fns": "^2.4.1",
+    "date-fns": "^2.10.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "faker": "^4.1.0",
-    "helmet": "^3.21.1",
+    "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.3.0",
-    "pm2": "^3.5.1",
-    "react-transition-group": "^4.3.0",
+    "pm2": "^4.2.3",
     "winston": "^3.2.1",
     "youch": "^2.0.10"
   },
   "devDependencies": {
-    "loadtest": "^3.0.8",
-    "nodemon": "^1.19.1",
+    "loadtest": "^4.1.0",
+    "nodemon": "^2.0.2",
     "rc-progress": "^2.5.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-loading-overlay": "^1.0.1",
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-spinners": "^0.5.13",
+    "react-scripts": "^3.4.0",
+    "react-spinners": "^0.8.0",
     "react-tippy": "^1.2.3",
     "react-toastify": "^5.3.2",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.3",
-    "styled-components": "^4.3.2"
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.0.1"
   },
   "eslintConfig": {
     "extends": "react-app"
